Fixed the overlay background and logo position on mobile

--- a/client/style/app/misc.less
+++ b/client/style/app/misc.less
@@ -1,6 +1,6 @@
 .overlay {
     opacity: 0.5;
-    background-color: @body-copy-color;
+    background-color: @bg-color;
     position:fixed;
     width:100%;
     height:100%;
