--- a/client/style/app/responsive.less
+++ b/client/style/app/responsive.less
@@ -86,6 +86,11 @@
             transform: none;
         }
     }
+
+    .login .login-container .login-component
+    {
+        margin: 65% auto 0;
+    }
 }
 
 @media (max-width: 639px)
@@ -101,17 +106,20 @@
             tr
             {
                 display: inline-block;
-                
+
                 margin-bottom: 20px;
-                td {
+                td
+                {
                     line-height: 1.7;
                 }
             }
         }
     }
 
-    .scrollable {
+    .scrollable
+    {
         overflow-y: auto !important;
+
         height: auto;
     }
 }
